[package]
name = "any-message-telnet"
version = "0.1.0"
authors = ["Ilias Makhiyanov <iliasmach@cloud-mind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
actix="0.12.0"
actix-rt = "2.2.0"
base = { version = "0.1.0", path = "../base" }
telnet = "0.1.4"
log="0.4.14"
dotenv="0.15.0"
env_logger = "0.9.0"
semver="1.0.3"

