[package]
name = "base"
version = "0.1.0"
authors = ["Ilias Makhiyanov <iliasmach@cloud-mind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.12.0"
actix-rt = "2.2.0"
uuid={version="0.8.2", features=["v4", "v5", "serde"]}
nanoid="0.4.0"
fastuuid="0.3.0"
nano-id = "0.1.1"
log="0.4.14"
chrono="0.4.19"
lazy_static="1.4.0"
env_logger = "0.8.4"
dotenv="0.15.0"
semver="1.0.3"